[package]
name = "rocket-jwt"
version = "0.1.0"
authors = ["Maniarr <nicolas@maniarr.fr>"]
edition = "2018"

[dependencies]
bcrypt = "0.2"
chrono = "0.4"
dotenv = "0.13"
jsonwebtoken = "5"
lazy_static = "1.2"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json", "uuid"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["v4", "serde"] }
reqwest = "0.9"
